--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,2 @@
-spring:
-  datasource:
-    url: jdbc:mysql://my-db:3306/mydb
-    username: root
-    password: 1234!!
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  data:
-    redis:
-      host: my-cache-server
-      port: 6379
+server:
+  port: 8081
